tests/NormalTests/paczka1/fuzzy1/92064221.err
Error in line 12: S626 A44 69,8
Error in line 17: u7w6 S307 83,7
Error in line 23: 1tjXpM S796 87,1
Error in line 26: VEV A44 60,7
Error in line 31: VEV S626 19,6
Error in line 32: VEV S796 81,0
Error in line 37: S626 S307 34,6
